# shipay-backend-challenge

./: README.md  pyproject.toml  resp6_to_8.txt  select.sql
api/: README.md  app.py  base.py  controller.py  models.py  requirements.txt
